# autonomous_rotorcraft

./: .gitignore  README.md
apps/arc/: start_arc.sh  toolchain-rpi.cmake
apps/arc/src/: CMakeLists.txt  arc2host_interface.cc  main.cc
apps/arc/src/app/: arc.cc  arc.hh  arc2host_interface.cc  arc2host_interface.hh  arc_actuators.cc  arc_actuators.hh  arc_control.cc  arc_control.hh  gnc_autopilot.cc  gnc_autopilot.hh
apps/arc/src/bsp/: comm_link_interface.cc  comm_link_interface.hh  gpio_base.cc  gpio_base.hh  measurements.hh  motor.cc  motor.hh  sensor.cc  sensor.hh  sensor_ST_LSM6DS33_defs.hh
apps/host/: CMakeLists.txt
apps/host/src/: CMakeLists.txt  host2arc_interface.cc  host2arc_interface.hh  main.cc  user_interface.cc  user_interface.hh
apps/host/src/app/: arc_host.cc  arc_host.hh  host2arc_interface.cc  host2arc_interface.hh  user_interface.cc  user_interface.hh
common/interfaces/: arc_errors.cc  arc_errors.hh  arc_host_interface.cc  arc_host_interface.hh  interface.hh
common/msg/: arc_host_msg.cc  arc_host_msg.hh  msg.hh
docs/: how_to_build_environment.md  how_to_build_environment.txt  how_to_execute.md  how_to_setup_camera.md  raspberry_pi_pin_assignments.md
firmware/arc/: CMakeLists.txt  toolchain-rpi.cmake
firmware/arc/src/: CMakeLists.txt  arc2host_interface.cc  arc2host_interface.hh  main.cpp
firmware/server_app/src/: CMakeLists.txt  host2arc_interface.hh  main.cc  main.cpp
tools/: rpi_automake_conf.sh
